--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
+<html>
 <head>
-<title>A simple title goes here</title>
-<link href="style.css" rel="stylesheet" />
+<title>Page Title</title>
 </head>
-
 <body>
-<h1>A simple heading goes here</h1>
-<p>This is a short paragraph. Here is another sentence.</p>
-</body>
 
-<!--This is a comment. Comments are not displayed in the browser. For more instructions on how to create HTML code, go to https://www.w3schools.com/html/default.asp-->
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
