--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Flarf Poem</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Ain't that Cool</h1>
 <p>This is a paragraph.</p>
 
 </body>
