--- a/index.html
+++ b/index.html
@@ -7,7 +7,60 @@
 <body>
 
 <h1>Ain't that Cool</h1>
-<p>This is a paragraph.</p>
+<h2>By Edgardo-38</h2>
+  
+<p>Oh! That's Cool not influencing<br>
+Just existing in today's ever changing world<br>
+I wanted to provide you with a place<br>
+To about some Feedback.<br><p>
+
+<p>That's Cool!<br>
+Where we highlight the amazing people<br>
+Finally a community<br>
+That's founded and grounded<br>
+In simplicity and quality<br>
+Oh! what great individuals.<br><p>
+
+<p>But gone are the days<br>
+Of someone telling you<br>
+About something<br>
+That you really don't care about.<br><p>
+
+<p>Oh that's cool<br>
+I found a super response<br>
+getting peeved out<br>
+By a such an unfortunate problem<br>
+So in that response.<br><p>
+
+<p>I say something<br>
+As mundane to some people<br>
+As if they think I really meant it<br>
+I respond with “I guess” or “not really”<br>
+That whatever they're doing<br>
+Is actually cool and important.<br><p>
+
+<p>Don't see anyone else<br>
+Do you feel down when someone says<br>
+“Oh hey, that's cool?”<br>
+And replies with<br>
+“Oh wow isn’t that nice.”<br><p>
+
+<p>Have you ever seen something<br>
+That's dedicated to you<br>
+What to say<br>
+So you say “oh good.”<br><p>
+
+<p>How do you respond to that<br>
+Like "that's cool" or "oh wow”<br>
+The weird, odd, or otherwise interesting things<br>
+The approval, appreciation, or agreement.<br><p>
+
+<p>Something they’ve said or done<br>
+They don’t have anything else to say<br>
+Doesn’t wanna offend you<br>
+Truly thinks they’re that cool<br>
+So I throw Decor that's In stock and funny.<br>
+</p>
 
 </body>
 </html>
