--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 </head>
 <body>
 
+<img src="PROJECT_1_Edgardo-38/img/Cool1.png" alt="Wordform of Oh's That's Cool">
+
 <h1>Ain't that Cool</h1>
 <h2>By Edgardo-38</h2>
   
 <p>Oh! That's Cool not influencing<br>
 Just existing in today's ever changing world<br>
 I wanted to provide you with a place<br>
-To about some Feedback.<br><p>
+To give some Feedback.<br><p>
 
 <p>That's Cool!<br>
 Where we highlight the amazing people<br>
@@ -32,8 +34,10 @@ getting peeved out<br>
 By a such an unfortunate problem<br>
 So in that response.<br><p>
 
-<p>I say something<br>
-As mundane to some people<br>
+<img src="PROJECT_1_Edgardo-38/img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison">
+
+<p>I say something as mundane<br>
+To some people<br>
 As if they think I really meant it<br>
 I respond with “I guess” or “not really”<br>
 That whatever they're doing<br>
@@ -48,19 +52,23 @@ And replies with<br>
 <p>Have you ever seen something<br>
 That's dedicated to you<br>
 What to say<br>
-So you say “oh good.”<br><p>
+So you say “Oh Good.”<br><p>
 
 <p>How do you respond to that<br>
-Like "that's cool" or "oh wow”<br>
+Like "That's cool" or "Oh wow”<br>
 The weird, odd, or otherwise interesting things<br>
 The approval, appreciation, or agreement.<br><p>
+
+<img src="PROJECT_1_Edgardo-38/img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
 
 <p>Something they’ve said or done<br>
 They don’t have anything else to say<br>
 Doesn’t wanna offend you<br>
 Truly thinks they’re that cool<br>
-So I throw Decor that's In stock and funny.<br>
+So I laugh at what's funny.<br>
 </p>
+
+<img src="PROJECT_1_Edgardo-38/img/Cool2.jpg" alt="Oh's That's Cool Logo">
 
 </body>
 </html>
