--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <title>Flarf Poem</title>
 <link rel="stylesheet" href="style.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 </head>
 <body>
 
