--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img src="PROJECT_1_Edgardo-38/img/Cool1.png" alt="Wordform of Oh's That's Cool">
+<img src="img/Cool1.png" alt="Wordform of Oh's That's Cool">
 
 <h1>Ain't that Cool</h1>
 <h2>By Edgardo-38</h2>
@@ -43,7 +43,7 @@ getting peeved out<br>
 By a such an unfortunate problem<br>
 So in that response.<br><p>
 
-<img src="PROJECT_1_Edgardo-38/img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison">
+<img src="img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison">
 
 <p>I say something as mundane<br>
 To some people<br>
@@ -68,7 +68,7 @@ Like "That's cool" or "Oh wow”<br>
 The weird, odd, or otherwise interesting things<br>
 The approval, appreciation, or agreement.<br><p>
 
-<img src="PROJECT_1_Edgardo-38/img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
+<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
 
 <p>Something they’ve said or done<br>
 They don’t have anything else to say<br>
@@ -77,7 +77,7 @@ Truly thinks they’re that cool<br>
 So I laugh at what's funny.<br>
 </p>
 
-<img src="PROJECT_1_Edgardo-38/img/Cool2.jpg" alt="Oh's That's Cool Logo">
+<img src="img/Cool2.jpg" alt="Oh's That's Cool Logo">
 
 </body>
 </html>
