--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ So I laugh at what's funny.<br>
 
 <img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
 
-<img src="img/Cool1.png" alt="Wordform of Oh's That's Cool">
+<img src="img/Cool1.png" alt="Wordform of Oh's That's Cool" width="404" height="442">
 
-<img src="img/Cool2.jpg" alt="Oh's That's Cool Logo">
+<img src="img/Cool2.jpg" alt="Oh's That's Cool Logo" width="404" height="442">
 
 </body>
 </html>
