--- a/index.html
+++ b/index.html
@@ -73,11 +73,15 @@ Truly thinks they’re that cool<br>
 So I laugh at what's funny.<br>
 </p>
 
-<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
+<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool"class="center">
+  
+<p>
+    
+</p>
+  
+<img src="img/Cool1.png" alt="Wordform of Oh's That's Cool" width="300" height="300">
 
-<img src="img/Cool1.png" alt="Wordform of Oh's That's Cool" width="404" height="442">
-
-<img src="img/Cool2.jpg" alt="Oh's That's Cool Logo" width="404" height="442">
+<img src="img/Cool2.jpg" alt="Oh's That's Cool Logo" width="404" height="300">
 
 </body>
 </html>
