--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img src="img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison" class="center">
+<img src="img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison">
 
 <h1>Ain't that Cool</h1>
 <h2>By Edgardo-38</h2>
