--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Truly thinks they’re that cool<br>
 So I laugh at what's funny.<br>
 </p>
 
-<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool"class="center">
+<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool"class>
   
 <p>
     
