--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img src="img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison">
+<img src="img/Cool3.gif" alt="Sayinhg Oh's That's Cool in Unison" class="center">
 
 <h1>Ain't that Cool</h1>
 <h2>By Edgardo-38</h2>
@@ -73,7 +73,7 @@ Truly thinks they’re that cool<br>
 So I laugh at what's funny.<br>
 </p>
 
-<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool"class>
+<img src="img/Cool4.gif" alt="Looking back and sayinhg Oh's That's Cool">
   
 <p>
     
